<resources>
    <string name="app_name">One App to Rule Them All</string>
    <string name="tag_picker">Picker</string>
    <string name="tag_edit_text">Edit Text</string>
    <string name="tag_sliders">Sliders</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="text">Text</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="password">Password</string>
    <string name="tag_Sliders">Sliders</string>
    <string name="search">Search</string>
    <string name="search_message">Enter a search term</string>
    <string name="search_title">Make a search:</string>
</resources>